// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroup > renders with ariaLabel correctly 1`] = `
"<div id="v-0-0" class="relative" aria-label="Aria label" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with as correctly 1`] = `
"<section id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</section>"
`;

exports[`RadioGroup > renders with class correctly 1`] = `
"<div id="v-0-0" class="absolute" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with defaultValue correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with description correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <p class="text-muted">Description 0</p>
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <p class="text-muted">Description 1</p>
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <p class="text-muted">Description 2</p>
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with description slot correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Description slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Description slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Description slot</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with descriptionKey correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <p class="text-muted">1</p>
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <p class="text-muted">2</p>
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <p class="text-muted">3</p>
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with disabled correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="-1" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" data-disabled="" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-disabled="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4 cursor-not-allowed opacity-75" id="v-0-0:1" role="radio" type="button" aria-checked="false" disabled="" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default cursor-not-allowed opacity-75">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-disabled="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4 cursor-not-allowed opacity-75" id="v-0-0:2" role="radio" type="button" aria-checked="false" disabled="" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default cursor-not-allowed opacity-75">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-disabled="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4 cursor-not-allowed opacity-75" id="v-0-0:3" role="radio" type="button" aria-checked="false" disabled="" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default cursor-not-allowed opacity-75">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with horizontal variant card correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="horizontal" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="horizontal" aria-required="false">
  <fieldset class="flex gap-x-2 flex-row gap-y-1">
    <!--v-if--><label class="flex items-start border border-muted rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-primary">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="horizontal" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:1" class="block font-medium text-default">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-muted rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-primary">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="horizontal" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:2" class="block font-medium text-default">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-muted rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-primary">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="horizontal" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:3" class="block font-medium text-default">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with horizontal variant list correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="horizontal" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="horizontal" aria-required="false">
  <fieldset class="flex gap-x-2 flex-row gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="horizontal" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="horizontal" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="horizontal" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with horizontal variant table correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="horizontal" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="horizontal" aria-required="false">
  <fieldset class="flex flex-row gap-0 -space-x-px">
    <!--v-if--><label class="flex items-start border border-muted flex-row text-sm p-3.5 first-of-type:rounded-s-lg last-of-type:rounded-e-lg has-data-[state=checked]:bg-primary/10 has-data-[state=checked]:border-primary/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="horizontal" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:1" class="block font-medium text-default">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-muted flex-row text-sm p-3.5 first-of-type:rounded-s-lg last-of-type:rounded-e-lg has-data-[state=checked]:bg-primary/10 has-data-[state=checked]:border-primary/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="horizontal" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:2" class="block font-medium text-default">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-muted flex-row text-sm p-3.5 first-of-type:rounded-s-lg last-of-type:rounded-e-lg has-data-[state=checked]:bg-primary/10 has-data-[state=checked]:border-primary/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="horizontal" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:3" class="block font-medium text-default">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with indicator end correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row-reverse text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full me-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row-reverse text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full me-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row-reverse text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full me-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with indicator hidden correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary sr-only size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full text-center"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary sr-only size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full text-center"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary sr-only size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full text-center"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with indicator start correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with items correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with label slot correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Label slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Label slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Label slot</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with labelKey correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with legend slot correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Legend slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Legend slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Legend slot</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with modelValue correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with neutral variant card correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if--><label class="flex items-start border border-muted rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-inverted">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-inverted after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:1" class="block font-medium text-default">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-muted rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-inverted">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:2" class="block font-medium text-default">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-muted rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-inverted">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:3" class="block font-medium text-default">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with neutral variant list correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-inverted after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with neutral variant table correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex flex-col gap-0 -space-y-px">
    <!--v-if--><label class="flex items-start border border-muted flex-row text-sm p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-elevated has-data-[state=checked]:border-inverted/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-inverted after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:1" class="block font-medium text-default">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-muted flex-row text-sm p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-elevated has-data-[state=checked]:border-inverted/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:2" class="block font-medium text-default">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-muted flex-row text-sm p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-elevated has-data-[state=checked]:border-inverted/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:3" class="block font-medium text-default">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with primary variant card correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if--><label class="flex items-start border border-muted rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-primary">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:1" class="block font-medium text-default">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-muted rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-primary">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:2" class="block font-medium text-default">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-muted rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-primary">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:3" class="block font-medium text-default">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with primary variant list correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with primary variant table correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex flex-col gap-0 -space-y-px">
    <!--v-if--><label class="flex items-start border border-muted flex-row text-sm p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-primary/10 has-data-[state=checked]:border-primary/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:1" class="block font-medium text-default">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-muted flex-row text-sm p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-primary/10 has-data-[state=checked]:border-primary/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:2" class="block font-medium text-default">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-muted flex-row text-sm p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-primary/10 has-data-[state=checked]:border-primary/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2">
        <p for="v-0-0:3" class="block font-medium text-default">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with required correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="true">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <legend class="mb-1 block font-medium text-default text-sm after:content-['*'] after:ms-0.5 after:text-error">Legend</legend>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="true" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="true" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="true" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with size lg correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4.5" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4.5" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4.5" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with size md correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with size sm correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-0.5">
    <!--v-if-->
    <div class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-3.5" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-3.5" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-3.5" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with size xl correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1.5">
    <!--v-if-->
    <div class="flex items-start flex-row text-base">
      <div class="flex items-center h-6"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-5" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-2"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-base">
      <div class="flex items-center h-6"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-5" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-base">
      <div class="flex items-center h-6"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-5" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with size xs correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-0.5">
    <!--v-if-->
    <div class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" data-active="" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-3" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full after:bg-default after:rounded-full bg-primary after:size-1"></span>
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-3" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-3" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with ui correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-4"><label for="v-0-0:1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-4"><label for="v-0-0:2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-4"><label for="v-0-0:3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with valueKey correctly 1`] = `
"<div id="v-0-0" class="relative" tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" role="radiogroup" aria-orientation="vertical" aria-required="false">
  <fieldset class="flex gap-x-2 flex-col gap-y-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:Option 1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="Option 1" aria-label="Option 1">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:Option 1" class="block font-medium text-default">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:Option 2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="Option 2" aria-label="Option 2">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:Option 2" class="block font-medium text-default">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button data-reka-collection-item="" tabindex="-1" data-orientation="vertical" class="rounded-full ring ring-inset ring-accented overflow-hidden focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary size-4" id="v-0-0:Option 3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="Option 3" aria-label="Option 3">
          <!---->
          <!---->
        </button></div>
      <div class="w-full ms-2"><label for="v-0-0:Option 3" class="block font-medium text-default">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;
